# minecrafts

./: .luarc.json  auto-merge-prs.sh
.sisyphus/: boulder.json
.sisyphus/evidence/: task-4-coords.txt  task-6-syntax.txt
.sisyphus/notepads/vs-radar/: analysis.md  issues.md  learnings.md
.sisyphus/plans/: vs-radar.md
radar/: alarm.lua  config.lua  install-angle.lua  install.lua  scanner.lua  startup.lua  state.lua  ui.lua
radar/angle/: config  scanner  startup  transmitter
radar/receiver/: alarm  config  receiver  scanner  startup  state  ui
reactor/: config.lua  main.py  pyproject.toml  reactor_monitor.lua
reactor/typings/socketio/: admin.pyi  async_admin.pyi  zmq_manager.pyi
transfer_via_laser/: lib.lua  main.lua  receiver.lua
