[project]
name = "reactor"
version = "0.1.0"
description = "Reactor monitoring and control system"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
  "fastapi[standard]==0.129.0",
  "gel==3.1.0",
  "loguru==0.7.3",
  "polars==1.36.1",
  "pydantic-settings>=2.10.1",
  "python-engineio==4.12.3",
  "python-socketio==5.16.0",
  "uvicorn==0.38.0",
  "websockets==15.0.1",
]
