[project]
name = "reactor"
version = "0.1.0"
description = "Reactor monitoring and control system"
readme = "README.md"
requires-python = ">=3.14.3,<3.15"
dependencies = [
  "fastapi[standard]==0.135.3",
  "gel==3.1.0",
  "loguru==0.7.3",
  "polars==1.39.3",
  "pydantic-settings>=2.10.1",
  "python-engineio==4.13.1",
  "python-socketio==5.16.1",
  "uvicorn==0.43.0",
  "websockets==16.0",
]
